--- a/unclose/README
+++ b/unclose/README
@@ -8,6 +8,6 @@ with a lot of nice changes:
 5. Frees up local storage (original version keeps writing to it).
 6. Minor UI changes, such as wider popup (500px) and url tooltips.
 7. Divide tab history into 20-item pages.
-8. Favicons
+8. Favicons (at this point loading of favicons halts the popup, would like to fix it)
 
 Note that tabs created before the installation of this extension will not be monitored.
