--- a/feed/README
+++ b/feed/README
@@ -1,1 +1,4 @@
 Fork of RSS Subscription Extension https://chrome.google.com/extensions/detail/nlbjncdgjeocebhnmkbbbdekmmmcbfjd
+Changes:
+1. Increase the maximum number of feed items to show in the preview from 10 to 50.
+2. Link the feed icon to the feed url in the preview.
