--- a/feed/README
+++ b/feed/README
@@ -2,3 +2,4 @@ Fork of RSS Subscription Extension https://chrome.google.com/extensions/detail/n
 Changes:
 1. Increase the maximum number of feed items to show in the preview from 10 to 50.
 2. Link the feed icon to the feed url in the preview.
+3. Recognize feeds and show preview (stolen from, and conflict with TPGoogleReader)
