--- a/feed/README
+++ b/feed/README
@@ -3,5 +3,6 @@ Changes:
 1. Increase the maximum number of feed items to show in the preview from 10 to 50.
 2. Link the feed icon to the feed url in the preview.
 3. Recognize feeds and show preview (conflicting with TPGoogleReader)
-4. Get expanded feed instead of summary, if possible.
-5. Support feeds with mime time text/html, e.g. ycombinator, stackoverflow.
+4. Get expanded feed instead of summary, if available.
+5. Native support for feedex.net, a feed expanding service.
+6. Support feeds with mime time text/html, e.g. ycombinator, stackoverflow.
