--- a/reader-compact/README
+++ b/reader-compact/README
@@ -1,2 +1,2 @@
 Fork of https://chrome.google.com/extensions/detail/ecpmglppfdncfdfcpfglgblaphkpnkhp
-Doesn't change fonts, and move the search box to the left by 20 px.
+Doesn't change fonts, and move the search box further to the left.
